# llm-zoomCamp-2026

./: .gitignore  README.md
01-agentic-rag/code/: agents.ipynb  homework.ipynb  notebook.ipynb  persistent_rag_ingest.ipynb  pyproject.toml
02-vector-search/code/: pgVector.ipynb  pyproject.toml  vSearch.ipynb
02-vector-search/code/llm-zoomcamp-hw2/: hw2.ipynb
03-orchestration/code/llm-zoomcamp-hw3/: README.md
03-orchestration/flows/: 3_rag_with_websearch.yaml  5_web_research_agent.yaml
04-evaluation/llm-zoomcamp-hw4/: evaluation_utils.py  hw4.ipynb  main.py  pyproject.toml
05-monitoring/llm-zoomcamp-hw5/: hw.ipynb  pyproject.toml  rag_helper.py  starter.py
code/: .gitignore  README.md  agents.ipynb  notebook.ipynb  persinsent_rag.ipynb  pyproject.toml  rag_helper.py
code/.ipynb_checkpoints/: notebook-checkpoint.ipynb
